# kefuka_p4_kanpe

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts  wrangler.jsonc
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build-windows.yml  test.yml
docs/: simulation-spec.md
e2e/: wizard.spec.ts
public/voice/: 生者の傷...踏まない.vvproj
release/: README.md
scripts/: shot.mjs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/p4/: EventCard.tsx  MinimumMode.tsx  PlayArena.tsx  ProcessFlow.tsx  SimulationMode.tsx  primitives.tsx
src/components/ui/: button.tsx  switch.tsx
src/p4/: arena.test.ts  arena.ts  events.ts  icons.ts  logic.test.ts  logic.ts  npc.test.ts  npc.ts  playTimeline.test.ts  playTimeline.ts  session.ts  simCompare.test.ts  simCompare.ts  simSchedule.test.ts  simSchedule.ts  simulation.test.ts  simulation.ts  speech.ts  timeline.test.ts  timeline.ts  types.ts
worker/: index.ts  room-logic.test.ts  room-logic.ts  tsconfig.json
